testsuite/tests/properties/invalid_raise/no_rtype.lkt
import common

class Example: FooNode implements TokenNode {
    fun p(): Int = raise PropertyError()
}
